--- a/src/components/GenreExplorer.css
+++ b/src/components/GenreExplorer.css
@@ -6,7 +6,6 @@
 /* Container */
 .ge {
   box-sizing: border-box;
-  overflow-x: hidden;
   max-width: 100%;
 }
 
